# Terminal-Daily-organizer-or-Tdo-

./: Cargo.toml  README.md  tasks.md
.github/workflows/: release.yml
docs/: index.html
github/workflows/: main.yml
src/: lib.rs  main.rs
