[package]
name = "tdo"
version = "0.1.0"
edition = "2021"
description = "Terminal Daily Organizer — manage tasks without leaving your terminal"

[[bin]]
name = "tdo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
colored = "2"
